src/jse/org/luaj/vm2/parser/LuaParser.java
/* Generated By:JavaCC: Do not edit this line. LuaParser.java */
package org.luaj.vm2.parser;
import org.luaj.vm2.*;
import org.luaj.vm2.ast.*;
import java.util.*;

public class LuaParser implements LuaParserConstants {
  static {
        LuaValue.valueOf(true);
  }

  public static void main(String args[]) throws ParseException {
    LuaParser parser = new LuaParser(System.in);
    parser.Chunk();
  }

  private static Exp.VarExp assertvarexp(Exp.PrimaryExp pe) throws ParseException {
        if (!pe.isvarexp())
                throw new ParseException("expected variable");
        return (Exp.VarExp) pe;
  }

  private static Exp.FuncCall assertfunccall(Exp.PrimaryExp pe) throws ParseException {
        if (!pe.isfunccall())
                throw new ParseException("expected function call");
        return (Exp.FuncCall) pe;
  }

  public SimpleCharStream getCharStream() {
        return jj_input_stream;
  }

  private long LineInfo() {
        return ((long) jj_input_stream.getBeginLine() << 32) | jj_input_stream.getBeginColumn();
  }

  private void L(SyntaxElement e, long startinfo) {
        e.beginLine = (int) (startinfo >> 32);
        e.beginColumn = (short) startinfo;
        e.endLine = token.endLine;
        e.endColumn = (short) token.endColumn;
  }

  private void L(SyntaxElement e, Token starttoken) {
        e.beginLine = starttoken.beginLine;
        e.beginColumn = (short) starttoken.beginColumn;
        e.endLine = token.endLine;
        e.endColumn = (short) token.endColumn;
  }

/** Root production. */
  final public Chunk Chunk() throws ParseException {
        Block b;
        Chunk c;
        long i = LineInfo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 69:
      jj_consume_token(69);
                token_source.SwitchTo(IN_COMMENT);
      break;
    default:
      ;
    }
    b = Block();
    jj_consume_token(0);
                                                                          c=new Chunk(b); L(c,i); {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Block Block() throws ParseException {
        Block b = new Block();
        Stat s;
        long i = LineInfo();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
      case DO:
      case FOR:
      case FUNCTION:
      case GOTO:
      case IF:
      case LOCAL:
      case REPEAT:
      case WHILE:
      case NAME:
      case DBCOLON:
      case 70:
      case 75:
        ;
        break;
      default:
        break label_1;
      }
      s = Stat();
                   b.add(s);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      s = ReturnStat();
                                                  b.add(s);
      break;
    default:
      ;
    }
                                                                  L(b,i); {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public Stat Stat() throws ParseException {
        Block b,b2;
        Exp e,e2,e3=null;
        Stat s;
        FuncName fn;
        FuncBody fb;
        Token n;
        List<Name> nl;
        List<Exp> el=null;
        long i = LineInfo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 70:
      jj_consume_token(70);
              {if (true) return null;}
      break;
    case DBCOLON:
      s = Label();
                    L(s,i); {if (true) return s;}
      break;
    case BREAK:
      jj_consume_token(BREAK);
                  s=Stat.breakstat(); L(s,i); {if (true) return s;}
      break;
    case GOTO:
      jj_consume_token(GOTO);
      n = jj_consume_token(NAME);
                          s=Stat.gotostat(n.image); L(s,i); {if (true) return s;}
      break;
    case DO:
      jj_consume_token(DO);
      b = Block();
      jj_consume_token(END);
                               s=Stat.block(b); L(s,i); {if (true) return s;}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      e = Exp();
      jj_consume_token(DO);
      b = Block();
      jj_consume_token(END);
                                               s=Stat.whiledo(e,b); L(s,i); {if (true) return s;}
      break;
    case REPEAT:
      jj_consume_token(REPEAT);
      b = Block();
      jj_consume_token(UNTIL);
      e = Exp();
                                             s=Stat.repeatuntil(b,e); L(s,i); {if (true) return s;}
      break;
    case IF:
      s = IfThenElse();
                         L(s,i); {if (true) return s;}
      break;
    default:
      if (jj_2_1(3)) {
        jj_consume_token(FOR);
        n = jj_consume_token(NAME);
        jj_consume_token(71);
        e = Exp();
        jj_consume_token(72);
        e2 = Exp();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 72:
          jj_consume_token(72);
          e3 = Exp();
          break;
        default:
          ;
        }
        jj_consume_token(DO);
        b = Block();
        jj_consume_token(END);
                                                                                                          s=Stat.fornumeric(n.image,e,e2,e3,b); L(s,i); {if (true) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
          jj_consume_token(FOR);
          nl = NameList();
          jj_consume_token(IN);
          el = ExpList();
          jj_consume_token(DO);
          b = Block();
          jj_consume_token(END);
                                                                     s=Stat.forgeneric(nl,el,b); L(s,i); {if (true) return s;}
          break;
        case FUNCTION:
          jj_consume_token(FUNCTION);
          fn = FuncName();
          fb = FuncBody();
                                                 s=Stat.functiondef(fn,fb); L(s,i); {if (true) return s;}
          break;
        default:
          if (jj_2_2(2)) {
            jj_consume_token(LOCAL);
            jj_consume_token(FUNCTION);
            n = jj_consume_token(NAME);
            fb = FuncBody();
                                                                 s=Stat.localfunctiondef(n.image,fb); L(s,i); {if (true) return s;}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LOCAL:
              jj_consume_token(LOCAL);
              nl = NameList();
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case 71:
                jj_consume_token(71);
                el = ExpList();
                break;
              default:
                ;
              }
                                                       s=Stat.localassignment(nl,el); L(s,i); {if (true) return s;}
              break;
            case NAME:
            case 75:
              s = ExprStat();
                       L(s,i); {if (true) return s;}
              break;
            default:
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Stat IfThenElse() throws ParseException {
        Block b,b2,b3=null;
        Exp e,e2;
        List<Exp> el=null;
        List<Block> bl=null;
    jj_consume_token(IF);
    e = Exp();
    jj_consume_token(THEN);
    b = Block();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF:
        ;
        break;
      default:
        break label_2;
      }
      jj_consume_token(ELSEIF);
      e2 = Exp();
      jj_consume_token(THEN);
      b2 = Block();
                        if (el==null) el=new ArrayList<Exp>();
                        if (bl==null) bl=new ArrayList<Block>();
                        el.add(e2);
                        bl.add(b2);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      b3 = Block();
      break;
    default:
      ;
    }
    jj_consume_token(END);
                          {if (true) return Stat.ifthenelse(e,b,el,bl,b3);}
    throw new Error("Missing return statement in function");
  }

  final public Stat ReturnStat() throws ParseException {
        List<Exp> el=null;
        Stat s;
        long i = LineInfo();
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LONGSTRING0:
    case LONGSTRING1:
    case LONGSTRING2:
    case LONGSTRING3:
    case LONGSTRINGN:
    case FALSE:
    case FUNCTION:
    case NIL:
    case NOT:
    case TRUE:
    case NAME:
    case NUMBER:
    case STRING:
    case CHARSTRING:
    case 69:
    case 75:
    case 79:
    case 80:
    case 83:
      el = ExpList();
      break;
    default:
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 70:
      jj_consume_token(70);
      break;
    default:
      ;
    }
                                              s=Stat.returnstat(el); L(s,i); {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Stat Label() throws ParseException {
        Token n;
    jj_consume_token(DBCOLON);
    n = jj_consume_token(NAME);
    jj_consume_token(DBCOLON);
                                       {if (true) return Stat.labelstat(n.image);}
    throw new Error("Missing return statement in function");
  }

  final public Stat ExprStat() throws ParseException {
        Exp.PrimaryExp p;
        Stat s=null;
        long i = LineInfo();
    p = PrimaryExp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 71:
    case 72:
      s = Assign(assertvarexp(p));
      break;
    default:
      ;
    }
          if (s==null) { s=Stat.functioncall(assertfunccall(p)); } L(s,i); {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Stat Assign(Exp.VarExp v0) throws ParseException {
        List<Exp.VarExp> vl = new ArrayList<Exp.VarExp>();
        vl.add(v0);
        Exp.VarExp ve;
        List<Exp> el;
        Stat s;
        long i = LineInfo();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 72:
        ;
        break;
      default:
        break label_3;
      }
      jj_consume_token(72);
      ve = VarExp();
                            vl.add(ve);
    }
    jj_consume_token(71);
    el = ExpList();
                                                                s=Stat.assignment(vl,el); L(s,i); {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Exp.VarExp VarExp() throws ParseException {
        Exp.PrimaryExp p;
    p = PrimaryExp();
                         {if (true) return assertvarexp(p);}
    throw new Error("Missing return statement in function");
  }

  final public FuncName FuncName() throws ParseException {
        Token n;
        FuncName f;
    n = jj_consume_token(NAME);
                  f=new FuncName(n.image);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 73:
        ;
        break;
      default:
        break label_4;
      }
      jj_consume_token(73);
      n = jj_consume_token(NAME);
                                f.adddot(n.image);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 74:
      jj_consume_token(74);
      n = jj_consume_token(NAME);
                                f.method=n.image;
      break;
    default:
      ;
    }
                         L(f,n); {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  final public Exp.PrimaryExp PrefixExp() throws ParseException {
        Token n;
        Exp e;
        Exp.PrimaryExp p;
        long i = LineInfo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      n = jj_consume_token(NAME);
                                          p=Exp.nameprefix(n.image); L(p,i); {if (true) return p;}
      break;
    case 75:
      jj_consume_token(75);
      e = Exp();
      jj_consume_token(76);
                                  p=Exp.parensprefix(e); L(p,i); {if (true) return p;}
      break;
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp.PrimaryExp PrimaryExp() throws ParseException {
        Exp.PrimaryExp p;
        long i = LineInfo();
    p = PrefixExp();
    label_5:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_5;
      }
      p = PostfixOp(p);
    }
                                                         L(p,i); {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Exp.PrimaryExp PostfixOp(Exp.PrimaryExp lhs) throws ParseException {
        Token n;
        Exp e;
        FuncArgs a;
        Exp.PrimaryExp p;
        long i = LineInfo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 73:
      jj_consume_token(73);
      n = jj_consume_token(NAME);
                                                  p=Exp.fieldop(lhs, n.image); L(p,i); {if (true) return p;}
      break;
    case 77:
      jj_consume_token(77);
      e = Exp();
      jj_consume_token(78);
                                                  p=Exp.indexop(lhs, e); L(p,i); {if (true) return p;}
      break;
    case 74:
      jj_consume_token(74);
      n = jj_consume_token(NAME);
      a = FuncArgs();
                                          p=Exp.methodop(lhs, n.image,a); L(p,i); {if (true) return p;}
      break;
    case LONGSTRING0:
    case LONGSTRING1:
    case LONGSTRING2:
    case LONGSTRING3:
    case LONGSTRINGN:
    case STRING:
    case CHARSTRING:
    case 75:
    case 80:
      a = FuncArgs();
                                                  p=Exp.functionop(lhs, a); L(p,i); {if (true) return p;}
      break;
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FuncArgs FuncArgs() throws ParseException {
        List<Exp> el=null;
        TableConstructor tc;
        LuaString s;
        FuncArgs a;
        long i = LineInfo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 75:
      jj_consume_token(75);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LONGSTRING0:
      case LONGSTRING1:
      case LONGSTRING2:
      case LONGSTRING3:
      case LONGSTRINGN:
      case FALSE:
      case FUNCTION:
      case NIL:
      case NOT:
      case TRUE:
      case NAME:
      case NUMBER:
      case STRING:
      case CHARSTRING:
      case 69:
      case 75:
      case 79:
      case 80:
      case 83:
        el = ExpList();
        break;
      default:
        ;
      }
      jj_consume_token(76);
                                          a=FuncArgs.explist(el); L(a,i); {if (true) return a;}
      break;
    case 80:
      tc = TableConstructor();
                                          a=FuncArgs.tableconstructor(tc); L(a,i); {if (true) return a;}
      break;
    case LONGSTRING0:
    case LONGSTRING1:
    case LONGSTRING2:
    case LONGSTRING3:
    case LONGSTRINGN:
    case STRING:
    case CHARSTRING:
      s = Str();
                                                          a=FuncArgs.string(s); L(a,i); {if (true) return a;}
      break;
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<Name> NameList() throws ParseException {
        List<Name> l = new ArrayList<Name>();
        Token name;
    name = jj_consume_token(NAME);
                     l.add(new Name(name.image));
    label_6:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(72);
      name = jj_consume_token(NAME);
                                                                                   l.add(new Name(name.image));
    }
                                                                                                                     {if (true) return l;}
    throw new Error("Missing return statement in function");
  }
